--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -688,7 +688,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="clearfix"> </div>
 			</div>
 			<div class="agileinfo_copyright">
-				<p>© Agriterra 2018. Todos os direitos reservados | Criado por <a href="https://dgcosta.com.br/">dgcosta.com.br</a></p>
+				<p>© Agriterra 2018. Todos os direitos reservados | Criado por <a href="https://diegocosta.dev/">diegocosta.dev</a></p>
 			</div>
 		</div>
 	</div>
