--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,11 +1,5 @@
-<!--
-author: W3layouts
-author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
 <title>Agriterra Advocacia</title>
@@ -13,6 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Agriterra Advocacia rural Advogado Jatai Goias ambiental" />
+
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //custom-theme -->
@@ -637,8 +632,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="w3_agileits_footer_grid_left">
 					<a href="#" data-toggle="modal" data-target="#myModal">
-							<img src="{% static 'images/4.jpg' %} alt=" " class="img-responsive" />
-						</a>
+							<img src="{% static 'images/4.jpg' %}" class="img-responsive" />
+					</a>
 					</div>
 					<div class="w3_agileits_footer_grid_left">
 					<a href="#" data-toggle="modal" data-target="#myModal">
